# RGPPrototype1

./: CMakeLists.txt
cmake/Modules/: gmock.cmake
